--- a/app/src/main/res/layout/saved_event_list_item.xml
+++ b/app/src/main/res/layout/saved_event_list_item.xml
@@ -65,6 +65,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
+            android:onClick="@{() -> clickListener.onClickDelete(savedEvent)}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
