--- a/app/src/main/res/layout/fragment_saved_event.xml
+++ b/app/src/main/res/layout/fragment_saved_event.xml
@@ -13,29 +13,6 @@
         android:layout_height="match_parent"
         tools:context=".view.SavedEventFragment">
 
-        <EditText
-            android:id="@+id/event_name_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="イベント名を入力"
-            android:inputType="textPersonName"
-            app:layout_constraintEnd_toStartOf="@+id/input_event_button"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/input_event_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="イベント追加"
-            app:layout_constraintBottom_toBottomOf="@+id/event_name_edit"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/event_name_edit"
-            app:layout_constraintTop_toTopOf="@+id/event_name_edit" />
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/saved_event_list"
             android:layout_width="match_parent"
@@ -43,7 +20,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/event_name_edit">
+            app:layout_constraintTop_toTopOf="parent">
 
         </androidx.recyclerview.widget.RecyclerView>
     </androidx.constraintlayout.widget.ConstraintLayout>
