--- a/app/src/main/res/layout/saved_event_list_item.xml
+++ b/app/src/main/res/layout/saved_event_list_item.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:text="2020/8/22/19:00〜"
+            android:text="@{savedEvent.date}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="2020/8/22/19:00〜" />
