プロジェクト構造の変更

--- a/app/src/main/res/layout/saved_event_list_item.xml
+++ b/app/src/main/res/layout/saved_event_list_item.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="clickListener"
-            type="com.example.intern_3days_hackathon.view.SavedEventListener" />
+            type="com.example.intern_3days_hackathon.view.save.SavedEventListener" />
 
     </data>
 
