--- a/app/src/main/res/layout/fragment_event_list.xml
+++ b/app/src/main/res/layout/fragment_event_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.EventListFragment">
+    tools:context=".view.search.EventListFragment">
 
 <!--    <data>-->
 <!--        <variable android:name="viewModel" android:type="com.example.intern_3days_hackathon.MainViewModel" />-->
