--- a/app/src/main/res/layout/fragment_saved_event.xml
+++ b/app/src/main/res/layout/fragment_saved_event.xml
@@ -11,7 +11,7 @@
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.SavedEventFragment">
+        tools:context=".view.save.SavedEventFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/saved_event_list"
