--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -6,11 +6,11 @@
     app:startDestination="@id/searchFragment">
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.example.intern_3days_hackathon.view.SearchFragment"
+        android:name="com.example.intern_3days_hackathon.view.search.SearchFragment"
         android:label="@string/search_view" />
     <fragment
         android:id="@+id/savedEventFragment"
-        android:name="com.example.intern_3days_hackathon.view.SavedEventFragment"
+        android:name="com.example.intern_3days_hackathon.view.save.SavedEventFragment"
         android:label="@string/saved_event"
         tools:layout="@layout/fragment_saved_event" >
         <action
@@ -19,12 +19,12 @@
     </fragment>
     <fragment
         android:id="@+id/userFragment"
-        android:name="com.example.intern_3days_hackathon.view.UserFragment"
+        android:name="com.example.intern_3days_hackathon.view.user.UserFragment"
         android:label="@string/user_settings"
         tools:layout="@layout/fragment_user" />
     <fragment
         android:id="@+id/savedEventDetailFragment"
-        android:name="com.example.intern_3days_hackathon.view.SavedEventDetailFragment"
+        android:name="com.example.intern_3days_hackathon.view.save.SavedEventDetailFragment"
         android:label="@string/event_list_view_detail" >
         <argument
             android:name="url"
